<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GENERAL -->
    <string name="app_name">UrbIS</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="nodesc"/>
	<string name="loginProgressText">Signing in&#8230;</string>
	<string name="propertiesFileProgressText">Connecting&#8230;</string>
	<string name="fileWFSProgressText">Retrieving data&#8230;</string>
	<string name="signupProgressText">Signing up&#8230;</string>
	<string name="sendSurveyProgressText">Uploading&#8230;</string>
	
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ok">OK</string>
	
	<string name="defaultSurveyName">Survey</string>
	    
    <!-- LABEL -->
    <string name="loginLabel">Login</string>
    <string name="signupLabel">Signup</string>
    
    <string name="backLabel">Back</string>
    <string name="deleteLabel">Delete</string>
    <string name="warningLabel">Warning</string>
    <string name="saveLabel">Save</string>
    
    <string name="deleteImageWarning">Delete image?</string>
    <string name="deleteAudioWarning">Delete audio?</string>
    
    <string name="prompt_user">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_passnotmatch">The password doens\'t match</string>
    <string name="rememberMeLabel">Remember me</string>
    
    <string name="signupHeaderLabel">Registration</string>
    
    <string name="welcomeLabel">Welcome</string>
   	<string name="newSurveyLabel">New survey</string> 
   	<string name="surveyDetailLabel">Survey\'s detail</string>  
    <string name="surveyListLabel">Survey list</string>
    <string name="logoutLabel">Logout</string>
    
    <string name="prompt_survey_name">Survey\'s name</string>
    <string name="audioFileLabel">Audio file</string>
    <string name="audioFileLength">00:00</string>
    <string name="secondLabel">sec</string>
    <string name="minuteLabel">min</string>
    
    <string name="attributesLabel">Attributes</string>
    <string name="attributesMoreLabel">What do you think about place where you are?</string>
    <string name="exceededTimeOutLabel">Exceeded record time limit</string>
    <string name="recordNewFileAudioWarning">Recording new audio will overwrite the previous one. Continue?</string>
    
    <string name="sendLabel">Send</string>
    
    <string name="errorLabel">Error</string>
    <string name="unauthorizedUser">User or password not valid!</string>
    <string name="genericAuthenticationError">Authentication error!</string>
    <string name="unauthorizedGeoserverUser">Authentication error on Geoserver!</string>
    <string name="serverNotAvailableError">Unable to contact the server for authentication!</string>
    <string name="noConnMessage">No connection available!</string>
    <string name="noConnOrPropFileMessage">No connection available or properties\'s file broken or does not exist!</string>
    <string name="noConnOrGeoserverFileMessage">No connection available or can\'t process file from Geoserver!</string>
    <string name="noWfsFoundMessage">Unable to find geoserver\'s address in configuration file!</string>
    <string name="noNamespaceFoundMessage">Unable to find namesapce in configuration file!</string>
    <string name="noSurveyNameFoundMessage">Unable to find survey name in configuration file!</string>
    <string name="mandatoryFieldsMissingMessage">Mandatory fields:</string>
    <string name="fileSuccessfullySentMessage">File successfully sent</string>
    <string name="fileErrorSentMessage">File not sent!</string>
    <string name="registrationSuccessMessage">Registered successfully</string>
    <string name="registrationErrorMessage">Registration error</string>
    <string name="registrationAnagErrorMessage">Registration anagraphic in GeoServer error</string>
    <string name="delImgBeforeSnapMessage">Delete current image before to take anoter one</string>
    <string name="logoutMessage">Logout?</string>
    
     <string name="NaNError">It is not a valid number!</string>
     <string name="invalidBoundariesError">The valid range is %1$s - %2$s</string>
     
     <string name="mandatoryFieldslegend">* mandatory field</string>
    
    <string name="registrationLabel">Registration</string>
    <string name="audioDbListLabel">Recordered decibel</string>
    <string name="audioDb">dB</string>
    <string name="audioLevel">Equivalent level:</string>
    <string name="instantDbLevel">Instant decibel:</string>
    <string name="startLabel">Start</string>
    <string name="playLabel">Play</string>
    <string name="stopLabel">Stop</string>
    <string name="viewDataLabel">View data</string>
    <string name="locationLabel">Coordinates</string>
    
    <!-- BUTTON -->
    
    
</resources>
