<LinearLayout 
    android:id="@+id/mLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- LOGO-BANNER -->
    <ImageView
        android:id="@+id/logoBannerImg"
        android:layout_width="match_parent"
        android:layout_height="45dp" 
        android:adjustViewBounds="true" 
        android:contentDescription="@string/nodesc"
        android:src="@drawable/banner"
        />
    
    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/loginStatusLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/loginStatusMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/fileWFSProgressText"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
    <!-- MAIN SCROLL VIEW -->
    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        
        
        <LinearLayout 
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >
            
            <TextView
		        android:id="@+id/welcomeHeaderLabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/welcomeLabel"
		        android:layout_gravity="center_horizontal"
		        android:padding="5dp"
		        android:textAppearance="@style/headerText"
			/>
            
            <LinearLayout 
	            android:id="@+id/buttonsLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingTop="70dp"
	            android:paddingBottom="20dp"
	            android:paddingLeft="40dp"
	            android:paddingRight="40dp"
	            >
	            
	            <Spinner 
                    android:id="@+id/layersCombo"
		            android:layout_width="160dp"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_horizontal"
                    />
	            
                <Button
		            android:id="@+id/newSurveyButton"
		            android:layout_width="160dp"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_horizontal"
		            android:text="@string/newSurveyLabel" />
                <Button
		            android:id="@+id/surveyListButton"
		            android:layout_width="160dp"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_horizontal"
		            android:text="@string/surveyListLabel" />
                
                 <Button
		            android:id="@+id/logoutButton"
		            android:layout_width="160dp"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_horizontal"
		            android:text="@string/logoutLabel" />
                
            </LinearLayout>
            
            
        </LinearLayout>
       
    </ScrollView>
        
    

</LinearLayout>
